--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,4 +8,5 @@
   <p><%= "❌ This task is not completed yet" %></p>
 <% end %>
 
+<p><%= link_to "Edit this task", edit_task_path %></p>
 <p><%= link_to "Back to list", tasks_path %></p>
