--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,12 +1,19 @@
-<h1><%= @task.title %></h1>
+<div class="container">
 
-<p><%= @task.details %></p>
+  <h1><%= @task.title %></h1>
 
-<% if @task.completed == true %>
-  <p><%= "✅ This task has been completed!" %></p>
-<% else %>
-  <p><%= "❌ This task is not completed yet" %></p>
-<% end %>
+  <p class="details"><%= @task.details %></p>
 
-<p><%= link_to "Edit this task", edit_task_path %></p>
-<p><%= link_to "Back to list", tasks_path %></p>
+  <% if @task.completed == true %>
+    <p><%= "✅ This task has been completed!" %></p>
+  <% else %>
+    <p><%= "❌ This task is not completed yet" %></p>
+  <% end %>
+
+  <div class="actions">
+    <%= link_to "Edit this task", edit_task_path, class: "btn btn-warning", style: "margin: 8px" %>
+    <%= link_to "Delete this task", task_path(@task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" }, class: "btn btn-danger", style: "margin: 8px" %>
+    <%= link_to "Back to list", tasks_path, class: "btn btn-primary", style: "margin: 8px" %>
+  </div>
+
+</div>
